Bug 449983 - I cannot use the app because it keeps exiting it whenever I choose a different brush
Summary: I cannot use the app because it keeps exiting it whenever I choose a differen...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.0.2
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 449977 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-11 00:52 UTC by Dylan
Modified: 2024-09-11 20:07 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This is just showing my log in info to krita of me trying to use the app, but it keeps logging me off of it (4.08 KB, text/plain)
2022-02-11 00:52 UTC, Dylan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dylan 2022-02-11 00:52:04 UTC
Created attachment 146563 [details]
This is just showing  my log in info to krita of me trying to use the app, but it keeps logging me off of it

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: surface pro 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Tiar 2022-02-11 01:18:41 UTC
*** Bug 449977 has been marked as a duplicate of this bug. ***
Comment 2 Tiar 2022-02-11 01:25:59 UTC
Hi @Dylan, you were supposed to add the log file to bug 449977, not create a new bug report... please next time make sure you add your comment and your log files to this place: https://bugs.kde.org/show_bug.cgi?id=449983 (best way: just visit that link and then add comments and files - there is a little "Add an attachment" button below bug report information).

1. Can you please tell me whether Krita only always crash when you create the canvas?

2. And could you please also attach the file that you can find if you put this text into the file browser: %LOCALAPPDATA%\kritacrash.log

3. And please tell me why your Krita is installed in this location: C:\Program Files\WindowsApps\49800KritaProject.Krita_5.0.2.0_x64__n3kgb906j1zjg\krita - how did you install it?

4. You can try going (without creating an image) to Settings -> Configure Krita -> Display -> and change the Renderer from ANGLE/DirectX to OpenGL or the other way around, close and reopen Krita and see if it works then. If not, disable Canvas Acceleration and then close and open Krita and check if it works. And tell me if it helped or not.

5. You can reinstall krita, but it won't help in this case. You could reset the configuration though. Instruction: https://docs.krita.org/en/KritaFAQ.html?highlight=configuration#resetting-krita-configuration - Make sure to remove the 'kritadisplayrc' file as well. Remember that it will reset your configuration to default values.
Comment 3 Alvin Wong 2022-02-11 06:58:16 UTC
(In reply to Tiar from comment #2)
> 3. And please tell me why your Krita is installed in this location:
> C:\Program
> Files\WindowsApps\49800KritaProject.Krita_5.0.2.0_x64__n3kgb906j1zjg\krita -
> how did you install it?

That's the Microsoft Store package.
Comment 4 Dylan 2022-02-12 01:45:16 UTC
Can you just give me step by step on how to fix it in the app, instead of saying it’s the Microsoft storage package? If not then I would like a refund sense your app is NON FUNCTIONAL

Sent from my iPhone

> On Feb 10, 2022, at 11:58 PM, Alvin Wong <bugzilla_noreply@kde.org> wrote:
> 
> https://bugs.kde.org/show_bug.cgi?id=449983
> 
> Alvin Wong <alvin@alvinhc.com> changed:
> 
>           What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                 CC|                            |alvin@alvinhc.com
> 
> --- Comment #3 from Alvin Wong <alvin@alvinhc.com> ---
> (In reply to Tiar from comment #2)
>> 3. And please tell me why your Krita is installed in this location:
>> C:\Program
>> Files\WindowsApps\49800KritaProject.Krita_5.0.2.0_x64__n3kgb906j1zjg\krita -
>> how did you install it?
> 
> That's the Microsoft Store package.
> 
> -- 
> You are receiving this mail because:
> You reported the bug.
Comment 5 Bug Janitor Service 2022-02-12 04:36:49 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 6 Halla Rempt 2022-02-12 10:04:49 UTC
Please reset Krita's settings (https://docs.krita.org/en/KritaFAQ.html#resetting-krita-configuration). 

I'm sorry, but we cannot give you a refund because the Microsoft store does not allow that. We don't even know who bought Krita on the store. But given that a couple of million people use Krita daily on Windows, it's pretty clear that Krita is functional, there's just a problem on your system, and we haven't figured that out yet.
Comment 7 Alvin Wong 2022-02-12 12:11:36 UTC
(In reply to Dylan from comment #4)
> Can you just give me step by step on how to fix it in the app, instead of
> saying it’s the Microsoft storage package? If not then I would like a refund
> sense your app is NON FUNCTIONAL

Sorry if my previous comment confused you. My comment was a direct reply to a question from Tiar and not a reply to your original report. Did you read the comment #2 from Tiar? That comment listed some things you may try to do to fix Krita or provide us with more information to diagnose the issue.

Since you are using the Microsoft Store release of Krita, you can also try to reset the app settings from Windows: https://support.microsoft.com/en-us/windows/repair-apps-and-programs-in-windows-e90eefe4-d0a2-7c1b-dd59-949a9030f317

Just to be clear, I am a volunteer contributor helping the Krita project on my own free time. I am not someone from a paid support team or anything like that.
Comment 8 Halla Rempt 2022-03-03 14:50:51 UTC
Git commit e608afb9777694aa202b9bde267ee6c9532947a0 by Halla Rempt.
Committed on 03/03/2022 at 14:50.
Pushed by rempt into branch 'krita/5.0'.

Change unsafe assert into an if statement

The values can come from the config file, and if the config file
gets corrupted, this will make it impossible to start Krita.

M  +5    -3    libs/global/KisRectsGrid.cpp

https://invent.kde.org/graphics/krita/commit/e608afb9777694aa202b9bde267ee6c9532947a0
Comment 9 Halla Rempt 2022-03-03 14:50:59 UTC
Git commit 907120b919056b8d563e055aead9eb0e8ddd1391 by Halla Rempt.
Committed on 03/03/2022 at 14:50.
Pushed by rempt into branch 'master'.

Change unsafe assert into an if statement

The values can come from the config file, and if the config file
gets corrupted, this will make it impossible to start Krita.
(cherry picked from commit e608afb9777694aa202b9bde267ee6c9532947a0)

M  +5    -3    libs/global/KisRectsGrid.cpp

https://invent.kde.org/graphics/krita/commit/907120b919056b8d563e055aead9eb0e8ddd1391
Comment 10 Halla Rempt 2022-03-03 14:52:34 UTC
I've changed the unsafe assert into a check and a log message. Krita 5.0.4 will have the fix. (That said, resetting Krita's settings should also have solved the issue. I suspect the kritarc file became corrupted.