Change unsafe assert into an if statement

The values can come from the config file, and if the config file
gets corrupted, this will make it impossible to start Krita.

BUG:449983
(cherry picked from commit e608afb9777694aa202b9bde267ee6c9532947a0)